--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<html>
+<head>
+  <title>Portfolio
+  </title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    
+  </body>
+</html>
